# 04_clinical_risk_modeling_interpretability_bias

./: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_UPDATED.md  docker-compose.yml  evaluate.py  pyproject.toml  random_file_0.txt  random_file_1.txt  random_file_2.txt  requirements-dev.txt  requirements.txt  setup.py  train.py
configs/: model_config.yaml
docs/: COMPLETE_ARCHITECTURE.md  milestone_2026-03-02.md  plan.md
examples/: demo.py
scripts/: generate_synthetic_data.py  train.py
src/: __init__.py
src/api/: __init__.py  main.py
src/data/: preprocessing.py  schema.py
src/fairness/: __init__.py  auditor.py  metrics.py
src/interpretability/: __init__.py  explainer.py  shap_stub.py
src/models/: __init__.py  clinical_model.py  train.py
src/utils/: __init__.py  logger.py  metrics.py
tests/: test_fairness.py  test_metrics_utils.py  test_pipeline.py
